<resources>
    <string name="app_name">MiPrimerAplicacionAndrioid</string>
    <string name="activity_principal">Actividad Home</string>
    <string name="activity_secundaria">Actividad secundaria</string>
    <string name="text_intent">intent explícito</string>
    <string name="text_toast">toast</string>
    <string name="text_snack_bar">snack bar</string>
    <string name="text_dialog">dialog</string>
    <string name="text_url">url</string>
    <string name="text_mapa">mapa</string>
    <string name="text_llamada">llamada</string>
    <string name="text_email">email</string>
</resources>